<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="reportViewModel"
            type="org.nano.updater.ui.report.ReportViewModel" />
    </data>

        <LinearLayout
            android:id="@+id/reportContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/grid_2"
            android:paddingTop="@dimen/grid_3"
            android:paddingBottom="@dimen/bottom_app_bar_height">

            <ImageView
                android:id="@+id/reportImage"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/avd_bug_report"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/reportTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_1"
                android:text="@string/report_title_grabbing_logs"
                android:textAppearance="@style/TextAppearance.Nano.Headline5" />

            <TextView
                android:id="@+id/reportDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/report_desc"
                android:textAppearance="@style/TextAppearance.Nano.Body2" />

            <TextView
                android:id="@+id/reportStatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_2"
                android:text="@string/report_status_text"
                android:textAppearance="@style/TextAppearance.Nano.Headline6" />

            <TextView
                android:id="@+id/reportStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Nano.Body2"
                android:textColor="@color/nano_green_300"
                tools:text="Generating kernel logs" />

        </LinearLayout>
</layout>