<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="listener"
            type="org.nano.updater.ui.home.HomeAdapter.HomeAdapterListener" />

        <variable
            name="updateCard"
            type="org.nano.updater.model.HomeModelItem.UpdateCard" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/update_root_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/grid_0_5"
        android:layout_marginVertical="@dimen/grid_0_25"
        android:transitionName="@{@string/transition_update(updateCard.position)}"
        android:onClick="@{(view) -> listener.onUpdateCardClicked(view, updateCard.position)}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="@dimen/grid_2">

            <TextView
                android:id="@+id/last_checked"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/grid_2"
                android:layout_marginTop="@dimen/grid_1"
                android:text="@{updateCard.lastChecked.empty ? @string/last_checked_never : updateCard.lastChecked}"
                android:textAppearance="@style/TextAppearance.Nano.Body2"
                app:layout_constraintEnd_toStartOf="@+id/card_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/updater_card_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/grid_2"
                android:layout_marginTop="@dimen/grid_1"
                android:fontFamily="@font/montserrat_bold"
                android:text="@{updateCard.title}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintEnd_toStartOf="@+id/card_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_checked" />

            <ImageView
                android:id="@+id/card_image"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginHorizontal="@dimen/grid_2"
                android:layout_marginTop="@dimen/grid_1"
                android:contentDescription="TODO"
                app:src="@{updateCard.icon}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/installed_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/grid_2"
                android:layout_marginTop="@dimen/grid_1"
                android:text="@string/installed_text"
                android:textAppearance="@style/TextAppearance.Nano.Body2"
                app:layout_constraintEnd_toStartOf="@+id/updater_latest_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/updater_card_title" />

            <TextView
                android:id="@+id/installed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{updateCard.currentVersion ?? @string/unknown}"
                android:textAppearance="@style/TextAppearance.Nano.Subtitle2"
                app:layout_constraintStart_toStartOf="@+id/installed_text"
                app:layout_constraintTop_toBottomOf="@+id/installed_text" />

            <TextView
                android:id="@+id/updater_latest_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_1"
                android:text="@string/latest_text"
                android:textAppearance="@style/TextAppearance.Nano.Body2"
                app:layout_constraintEnd_toEndOf="@+id/card_image"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/installed_text"
                app:layout_constraintTop_toBottomOf="@+id/updater_card_title" />

            <TextView
                android:id="@+id/updater_latest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{updateCard.latestVersion ?? @string/unknown}"
                android:textAppearance="@style/TextAppearance.Nano.Subtitle2"
                app:layout_constraintStart_toStartOf="@+id/updater_latest_text"
                app:layout_constraintTop_toBottomOf="@+id/updater_latest_text" />

            <TextView
                android:id="@+id/updater_build_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_2"
                android:text="@string/build_text"
                android:textAppearance="@style/TextAppearance.Nano.Body2"
                app:layout_constraintStart_toStartOf="@+id/installed_text"
                app:layout_constraintTop_toBottomOf="@+id/installed" />

            <TextView
                android:id="@+id/updater_build"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Nano.Subtitle2"
                android:text="@{updateCard.currentBuild ?? @string/unknown}"
                app:layout_constraintStart_toStartOf="@id/updater_build_text"
                app:layout_constraintTop_toBottomOf="@+id/updater_build_text" />

            <TextView
                android:id="@+id/status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_2"
                android:text="@string/card_title_status"
                android:textAppearance="@style/TextAppearance.Nano.Body2"
                app:layout_constraintStart_toStartOf="@+id/updater_latest_text"
                app:layout_constraintTop_toBottomOf="@+id/updater_latest" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{updateCard.status ?? @string/unknown}"
                android:textAppearance="@style/TextAppearance.Nano.Subtitle2"
                app:layout_constraintStart_toStartOf="@+id/status_text"
                app:layout_constraintTop_toBottomOf="@+id/status_text"
                app:statusColor="@{updateCard.updateAvailable}"
                app:position="@{updateCard.position}"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>